added agent memory support on agent builder studio